--- a/todo/Cargo.toml
+++ b/todo/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = {version = "0.4.30", features = ["serde"]}
+crossterm = {version = "0.27.0", features = ["serde"]}
+serde = {version = "1.0.188", features = ["derive"]}
+serde_json = "1.0.106"
+thiserror = "1.0.48"
+tui = {version = "0.19.0", features = ["crossterm", "serde"]}
